--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
     "type": "git",
     "url": "git+https://github.com/ibrhm-mnf/react-library-rollup.git"
   },
-  "keywords": ["react", "rollup"],
+  "keywords": [
+    "react",
+    "rollup"
+  ],
   "author": "Ibrahim Manaf P",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ibrhm-mnf/react-library-rollup/issues"
   },
-  "homepage": "https://github.com/ibrhm-mnf/react-library-rollup#readme"
+  "homepage": "https://github.com/ibrhm-mnf/react-library-rollup#readme",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1"
+  }
 }
