--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/ibrhm-mnf/react-library-rollup#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
@@ -32,6 +35,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-standard": "^4.0.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.7.6"
+    "rollup": "^2.7.6",
+    "rollup-plugin-terser": "^5.3.0"
   }
 }
