--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@rollup/plugin-node-resolve": "^7.1.3",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "eslint-plugin-standard": "^4.0.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.7.6",
