--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.7.6",
     "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-terser": "^5.3.0"
   },
   "engines": {
